# qmdlview

./: .gitignore  CMakeLists.txt  README.md  build-gcc.sh
source/: dos_helpers.h  main.cpp  makefile  makefile.dj  makefile.haiku  makefile.mingw  mdl.c  mdl.h  palette.h  platform.h  platform_dos_vga.c  platform_sdl2_renderer.c  qmdlview.c  rgb.h  shim.h
